@@ -27,6 +27,7 @@ win32 {
 	LIBS			+= -lole32 \
 				-lsapi \
 				-lws2_32 \
+				-linpout32 \
 				-lwinmm
 
 
